<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="resetGpacConfigMessage">This will remove all GPAC settings. You have to quit the applications to apply changes. Do you
        want to continue ?</string>
    <string name="open_file">Open file…</string>
    <string name="open_url">Open URL…</string>
    <string name="about">About…</string>
    <string name="quit">Exit</string>
    <string name="really_quit">Are you sure that you want to exit Osmo4?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">Osmo4</string>
    <string name="titleWithURL">Osmo4 [%s]</string>
    <string name="copying_native_libs">Copying module %1$s to %2$s…</string>
    <string name="displayPopupFormat">%1$s\n%2$s</string>
    <string name="gpacNotInitialized">GPAC is not initialized</string>
    <string name="cleanCache">Clean Cache</string>
    <string name="cleaningCache">Cleaning Cache…</string>
    <string name="cleaningCacheDirectory">Cleaning Cache directory %s…</string>
    <string name="showVirtualKeyboard">Keyboard</string>
    <string name="reloadFile">Reload File</string>
    <string name="debug">Enable Debug</string>
    <string name="autoRotate">AutoRotate</string>
    <string name="quickSettings">Quick Settings</string>
    <string name="gpacNotInitializedLongMessages">Sorry, GPAC is not initialized, operation cannot be performed</string>
    <string name="usernameLabel">Username:</string>
    <string name="usernameHint">Username</string>
    <string name="passwordLabel">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="pleaseEnterAnURLtoConnectTo">Please Enter an URL to connect to…</string>
    <string name="pleaseSelectAFile">Select a file to open</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="directory">Directory</string>
    <string name="failedToLoadGPACConfig">Failed to load GPAC Config</string>
    <string name="fileSize">File [%d bytes]</string>
    <string name="selectFileTitlePattern">%1$s [%2$s]</string>
    <string name="selectFileDefaultTitle">Select a file</string>
    <string name="options">Options</string>
    <string name="aboutTitle">Osmo4 : GPAC for Android</string>
    <string name="aboutCopyright1">© Telecom-Paris-Tech, 2000–2012</string>
    <string name="aboutCopyright2">© Telecom-Paris-Tech</string>
    <string name="aboutLicence">published under LGPL</string>
    <string name="aboutAuthors">Authors:</string>
    <string name="osmoLoading">Osmo4 is loading…</string>
    <string name="gpacLoading">Gpac is loading…</string>
    <string name="resetGpacConfig">Reset GPAC Config</string>
    <string name="setAsStartupFile">Set as startup file…</string>
    <string name="setAsStartupFileMessage">Use %s as startup file ?</string>
    <string name="setAsStartupFileTitle">Startup file</string>
    <string name="setAsStartupFileYes">Use current</string>
    <string name="setAsStartupFileNo">Cancel</string>
    <string name="setAsStartupFileNull">No startup file</string>
    <string name="setAsStartupFileMessageNoURL">You are not connected to any URL. You may use this entry to set an URL as a startup file when
        connected to a given URL or file.</string>
    <string name="requestPermissionStorage">You need to give permission to access External Storage</string>
    <string name="configFileEditor">Config File Editor</string>
    <string name="noAttribute">No attribute found</string>
    <string name="noKey">No key found</string>
    <string name="noChange">New value same as old value</string>
    <string name="valueUpdated">Value updated</string>
    <string name="valueNotValid">Value not valid</string>
    <string name="option">Option</string>
    <string name="type">Type</string>
    <string name="dfault">Default</string>
    <string name="usage">Usage</string>
    <string name="description">Description</string>
    <string name="currentValue">Current value</string>
    <string name="newValue">New value</string>
    <string name="save">Save</string>
    <string name="files">Files</string>
    <string name="showHiddenFiles">Show hidden files</string>
    <string name="hiddenFilesSummary">Show files starting with \' . \'</string>
    <string name="sorting">Sorting</string>
    <string name="optionSummary">Click to view Options</string>
    <string name="sortOrder">Sort order</string>
    <string name="selectOne">Select one</string>
    <string name="sortBy">Sort files by</string>
    <string name="preferences">Preferences</string>
    <string name="foldersFirst">Folders First</string>
    <!-- All authors in alphabetical order -->
    <string-array name="allAuthors_array">
        <item>Romain Bouqueau</item>
        <item>Cyril Concolato</item>
        <item>Jean Lefeuvre</item>
        <item>Jonathan Sillan</item>
        <item>Pierre Souchay (VizionR)</item>
        <item>NGO Van Luyen</item>
        <item>Arsov Ivica</item>
    </string-array>

</resources>
