<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2dip">

        <ImageView
            android:id="@+id/about_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:src="@drawable/icon" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutCopyright1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/aboutCopyright1" />

            <TextView
                android:id="@+id/aboutCopyright2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/aboutCopyright2" />

            <TextView
                android:id="@+id/aboutLicence"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/aboutLicence" />

            <TextView
                android:id="@+id/aboutAuthors"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutAuthors" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/aboutAuthors_listView"
        style="@android:style/Widget.TextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:entries="@array/allAuthors_array"
        android:isScrollContainer="true" />
</LinearLayout>
