<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/option"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />

        <android.widget.AutoCompleteTextView
            android:id="@+id/optionsTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_weight="70"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/type"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="70"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/dfault"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />
        <TextView
            android:id="@+id/dfaultTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="70"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/usage"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />
        <TextView
            android:id="@+id/usageTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="70"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/description"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_weight="70"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/currentValue"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />
        <TextView
            android:id="@+id/currentValueEditText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:maxLines="4"
            android:layout_weight="70"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:text="@string/newValue"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="30"
            />
        <EditText
            android:id="@+id/newValueEditText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:maxLines="4"
            android:layout_weight="70"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:maxLines="4"
            android:layout_weight="70"
            />
    </LinearLayout>


</LinearLayout>