<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/usernameAndPasswordLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:baselineAligned="true">

                <TextView
                    android:id="@+id/userNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:text="@string/usernameLabel" />

                <EditText
                    android:id="@+id/userNamePrompt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="fill_horizontal|right"
                    android:hint="@string/usernameHint"
                    android:inputType="textUri"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:gravity="fill_horizontal">

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0"
                    android:baselineAligned="true"
                    android:text="@string/passwordLabel" />

                <EditText
                    android:id="@+id/passwordPrompt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="2"
                    android:gravity="fill_horizontal|right"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>
